--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.5",
+    "axios": "^1.7.9",
     "pinia": "^2.3.1",
     "primevue": "^4.2.5",
     "vue": "^3.5.13",
