--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primevue/themes": "^4.2.5",
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "pinia": "^2.3.1",
     "primevue": "^4.2.5",
     "vue": "^3.5.13",
