--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "sass": "^1.83.4",
+    "sass-embedded": "^1.83.4",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5",
     "vue-eslint-parser": "^9.4.3"
