--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.5",
+    "@vee-validate/rules": "^4.15.0",
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
     "pinia": "^2.3.1",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
